Fix T40878: Translate node is inconsistent