source/blender/compositor/operations/COM_WrapOperation.cpp
@@ -85,8 +85,8 @@ bool WrapOperation::determineDependingAreaOfInterest(rcti *input, ReadBufferOper
 	if (m_wrappingType == CMP_NODE_WRAP_X || m_wrappingType == CMP_NODE_WRAP_XY) {
 		// wrap only on the x-axis if tile is wrapping
 		newInput.xmin = getWrappedOriginalXPos(input->xmin);
-		newInput.xmax = getWrappedOriginalXPos(input->xmax);
-		if (newInput.xmin > newInput.xmax) {
+		newInput.xmax = getWrappedOriginalXPos(input->xmax) + 0.5f;
+		if (newInput.xmin >= newInput.xmax) {
 			newInput.xmin = 0;
 			newInput.xmax = this->getWidth();
 		}
@@ -94,8 +94,8 @@ bool WrapOperation::determineDependingAreaOfInterest(rcti *input, ReadBufferOper
 	if (m_wrappingType == CMP_NODE_WRAP_Y || m_wrappingType == CMP_NODE_WRAP_XY) {
 		// wrap only on the y-axis if tile is wrapping
 		newInput.ymin = getWrappedOriginalYPos(input->ymin);
-		newInput.ymax = getWrappedOriginalYPos(input->ymax);
-		if (newInput.ymin > newInput.ymax) {
+		newInput.ymax = getWrappedOriginalYPos(input->ymax) + 0.5f;
+		if (newInput.ymin >= newInput.ymax) {
 			newInput.ymin = 0;
 			newInput.ymax = this->getHeight();
 		}
